validator_derive_tests/tests/compile-fail/nest_all_fields_wo_validation.stderr
error[E0599]: the method `validate` exists for reference `&u8`, but its trait bounds were not satisfied
 --> tests/compile-fail/nest_all_fields_wo_validation.rs:3:10
  |
3 | #[derive(Validate)]
  |          ^^^^^^^^
  |
  = note: the following trait bounds were not satisfied:
          `u8: Validate`
          which is required by `&u8: Validate`
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
